# cpp_basic

./: CMakeLists.txt  README.md
02_TypeData/: variables_example.cpp
03_IfAndElse/: if_example.cpp
04_For/: for_example.cpp
05_Arrays/: arrays.cpp
06_Functions/: function_example.cpp
06_Headers/: headers.cpp  headers.h
07_Headers/: headers.cpp
07_InputOfData/: inputofdata.cpp
08_InputOfData/: inputofdata.cpp
08_Switch/: helpers.h  switch.cpp
09_DoWhile/: dowhile.cpp
09_Switch/: switch.cpp
11_ClassesAndObjects/: classandobject_example.cpp
12_Areas/: circle_area.cpp
Array_Example/: arrays.cpp
for_example/: for_example.cpp
if_example/: if_example.cpp
variables_example/: variables_example.cpp
